# stable-diffusion-rebuilt

./: .gitignore  pyproject.toml
config/: inference.yaml
configs/: inference.yaml  lora.yaml  samplers.yaml
dev/: example_inference.ipynb  probe_state_dict.ipynb  probe_unet.ipynb  sampler_comparison.ipynb  tokenizer_test.ipynb
notebooks/: build_dataset.ipynb  example_inference.ipynb  inference.ipynb  lora_inference.ipynb  train.ipynb
scripts/: caption.py  download_data.py  evaluate_lora.py  export_lora.py  filter_persian.py  generate.py  install_deps_colab.sh  lint.sh  scrape.py  train_lora.py
src/: attention.py  clip.py  ddpm.py  decoder.py  diffusion.py  encoder.py  pipeline.py
src/diffusion/: convert_weights.py  inference.py
src/diffusion/samplers/: ddim.py  ddpm.py  euler.py
src/sd15/: ddpm.py  inference.py
src/sd15/model/: autoencoder.py  unet.py
src/sdrebuilt/: convert_weights.py  dataset.py  inference.py  trainer.py
src/sdrebuilt/lora/: inject.py  layers.py  utils.py
src/sdrebuilt/model/: autoencoder.py  clip.py  unet.py
src/sdrebuilt/samplers/: ddpm.py
