[project]
name = "stablediffusion-from-scratch"
version = "0.1.0"
description = "Stable Diffusion 1.5 from scratch with finetuning."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.14.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "safetensors>=0.8.0",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "transformers>=5.12.0",
    "pyyaml"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "ruff>=0.15.16",
    "stablediffusion-from-scratch",
    "ipykernel>=7.3.0",
    "diffusers>=0.38.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.uv.sources]
stablediffusion-from-scratch = { workspace = true }
